--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,26 @@
-dist/
+# Dependencies
 node_modules/
+
+# Build output
+dist/
+coverage/
+
+# Environment files
 .env
+.env.*
+!.env.example
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Lock files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Misc
+.DS_Store
+*.tsbuildinfo
