--- a/backend/example.env
+++ b/backend/example.env
@@ -1,4 +1,5 @@
 # Gemini API Key - Get from: https://makersuite.google.com/app/apikey
+# Required for both chat and Computer Use features
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # ElevenLabs API Key - Get from: https://elevenlabs.io/
@@ -10,4 +11,11 @@ NESSIE_API_KEY=your_nessie_api_key_here
 # Server Configuration
 PORT=3001
 FLASK_ENV=development
+
+# ============================================
+# COMPUTER USE SETUP (for car recommendations)
+# ============================================
+# After installing requirements.txt, run:
+#   python -m playwright install chromium
+# This installs the browser needed for automation
 
